--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ requests
 opencv-python-headless
 adafruit-circuitpython-dht
 adafruit-circuitpython-ads1x15
+smbus2
 RPi.GPIO
 python-dotenv
 openai
